# Hummus.py

./: .gitlab-ci.yml  README.md  README.rst  __init__.py  allguild.py  author.py  events.py  funcs.py  guild.py  main.py  main_3.py  member.py  message.py  permissions.py  pyproject.toml  role.py  setup.py
.cache/nix/: binary-cache-v6.sqlite
.cache/replit/: __replit_disk_meta.json
.cache/replit/nix/: env.json
.upm/: store.json
docs/: getting_started.md  index.md  requirements.txt
docs/features/: commands.md  http.md  index.md  objects.md
docs/source/: conf.py  index.rst
docs/utilities/: aliases.md  enums.md  exceptions.md  index.md  settings.md  statuses.md
hummus/: __init__.py  allguild.py  embed.py  events.py  fetch.py  file.py  funcs.py  guild.py  http.py  main.py  member.py  message.py  permissions.py  ready.py  role.py  user.py
hummus/internal/: __init__.py  message.py
hummus/internal/http/: .message.py.un~  __init__.py  channel.py  guild.py  message.py  message.py~  self.py  user.py
hummus/utils/: __init__.py  commands.py  context.py  enums.py  exceptions.py  extras.py
hummus2016/: __init__.py  embed.py  events.py  main.py  member.py  message.py
