[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "Hummus.py"
authors = [{name = "LG125YT", email = "lg125yt@gmail.com"}]
dynamic = ["1.0.0", "An asynchronous and semi-decorationless (lol) API wrapper for Hummus, a Discord 2016 revival by Ziad87."]